unpackaged/main/default/objects/Lead/fields/Accepts_CC__c.field-meta.xml
<CustomField>
    <fullName>Accepts_CC__c</fullName>
    <inlineHelpText>Indicate if customer accepts credit cards for payment</inlineHelpText>
    <label>Accepts CC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>