unpackaged/main/default/objects/Lead/fields/Activation_Code__c.field-meta.xml
<CustomField>
    <fullName>Activation_Code__c</fullName>
    <label>Activation Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>