unpackaged/main/default/objects/Lead/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>The date the card was activated.</description>
    <inlineHelpText>The date the card was activated.</inlineHelpText>
    <label>Activation Date</label>
    <type>DateTime</type>
</CustomField>