unpackaged/main/default/objects/Lead/fields/Activation_Date_Day__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date_Day__c</fullName>
    <description>Day of week of the Activation Date pd-499</description>
    <formula>CASE(WEEKDAY(DATEVALUE(Activation_Date__c)),
						1,'Sunday',
						2,'Monday',
						3,'Tuesday',
						4,'Wednesday',
						5,'Thursday',
						6,'Friday',
						7,'Saturday',
					''
						)</formula>
    <inlineHelpText>Day of week of the Activation Date</inlineHelpText>
    <label>Activation Date Day</label>
    <type>Text</type>
</CustomField>