unpackaged/main/default/objects/Lead/fields/Additional_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Name_1__c</fullName>
    <description>Used by marketing to hold additional flags</description>
    <inlineHelpText>Used by marketing to hold additional flags</inlineHelpText>
    <label>Additional Name 1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>