unpackaged/main/default/objects/Lead/fields/AGS_Captured__c.field-meta.xml
<CustomField>
    <fullName>AGS_Captured__c</fullName>
    <formula>IF(AnnualRevenue &gt;= 0, True, False)</formula>
    <label>AGS Captured</label>
    <type>Checkbox</type>
</CustomField>