unpackaged/main/default/objects/Lead/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount requested on a Web to Lead form from a customer.</description>
    <inlineHelpText>Amount requested on a Web to Lead form from a customer.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>