unpackaged/main/default/objects/Lead/fields/Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales__c</fullName>
    <description>Used to capture a customer's reported annual sales through a web form.</description>
    <inlineHelpText>Annual Sales as reported by customer on web form.</inlineHelpText>
    <label>Annual Sales (new)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$500,000+</fullName>
            </value>
            <value>
                <fullName>$200,000-$500,000</fullName>
            </value>
            <value>
                <fullName>$100,000-$200,000</fullName>
            </value>
            <value>
                <fullName>$50,000-$100,000</fullName>
            </value>
            <value>
                <fullName>$25,000-$50,000</fullName>
            </value>
            <value>
                <fullName>$5,000-$25,000</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>