unpackaged/main/default/objects/Lead/fields/Assistant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Phone__c</fullName>
    <description>This field will capture a secondary contact phone number for an associate of the customer.</description>
    <inlineHelpText>Enter a phone number for a secondary contact.</inlineHelpText>
    <label>Assistant Phone</label>
    <type>Phone</type>
</CustomField>