unpackaged/main/default/objects/Lead/fields/Assistant_Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Secondary_Contact__c</fullName>
    <description>This field will capture a secondary contact on the lead object.</description>
    <inlineHelpText>Enter the name of the customer's assistant or secondary contact.</inlineHelpText>
    <label>Assistant / Secondary Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>