unpackaged/main/default/objects/Lead/fields/Auto_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if a lead has been auto-assigned.</description>
    <inlineHelpText>This field will indicate if a lead has been auto-assigned.</inlineHelpText>
    <label>Auto Assigned</label>
    <type>Checkbox</type>
</CustomField>