unpackaged/main/default/objects/Lead/fields/Bank_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact__c</fullName>
    <description>The name of the customer's contact at their bank.</description>
    <inlineHelpText>Enter the name of the customer's contact at their bank.</inlineHelpText>
    <label>Bank Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>