unpackaged/main/default/objects/Lead/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>The name of the customer's bank.</description>
    <inlineHelpText>Enter the name of the customer's bank.</inlineHelpText>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>