unpackaged/main/default/objects/Lead/fields/Bankruptcy_In_Past_2_Years__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_In_Past_2_Years__c</fullName>
    <description>This field captures if the customer has filed for Bankruptcy in the past 2 years.</description>
    <inlineHelpText>This field captures if the customer has filed for Bankruptcy in the past 2 years.</inlineHelpText>
    <label>Bankruptcy In Past 2 Years</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>