unpackaged/main/default/objects/Lead/fields/Best_Time_to_Reach__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Reach__c</fullName>
    <label>Best Time to Reach</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Anytime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>