unpackaged/main/default/objects/Lead/fields/Buyer_Zone_Id__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Zone_Id__c</fullName>
    <label>Buyerzone Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>