unpackaged/main/default/objects/Lead/fields/Card_Search_Used__c.field-meta.xml
<CustomField>
    <fullName>Card_Search_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if a rep used the card search when putting the lead in their name.</description>
    <inlineHelpText>This field will indicate if a rep used the card search when putting the lead in their name.</inlineHelpText>
    <label>Card Search Used</label>
    <type>Checkbox</type>
</CustomField>