unpackaged/main/default/objects/Lead/fields/CC_Processor__c.field-meta.xml
<CustomField>
    <fullName>CC_Processor__c</fullName>
    <description>Current Credit Card Processor</description>
    <inlineHelpText>Enter the customer's current credit card processor</inlineHelpText>
    <label>CC Processor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>