unpackaged/main/default/objects/Lead/fields/Commercial_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Credit_Score__c</fullName>
    <label>Commercial Credit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>