unpackaged/main/default/objects/Lead/fields/Company_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Company_Hyperlink__c</fullName>
    <formula>HYPERLINK(Id,  Company, "_self"  )</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>