unpackaged/main/default/objects/Lead/fields/Conga_Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Conga_Email_Template_Id__c</fullName>
    <description>CASE(DS_Last_Disposition__c, 
'Interested', '00X34000002TDiv',
'Call Back', '00X34000002TDf8',
'No Answer', '00X34000002TDfD',
'Not Right Now', '00X34000002TDeZ',
'00X34000002TDiv')</description>
    <formula>"Hi For Now"</formula>
    <label>Conga Email Template Id</label>
    <type>Text</type>
</CustomField>