unpackaged/main/default/objects/Lead/fields/convertedLeadInitialStatus__c.field-meta.xml
<CustomField>
    <fullName>convertedLeadInitialStatus__c</fullName>
    <defaultValue>"Not Set"</defaultValue>
    <label>convertedLeadInitialStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Not Set</fullName>
            </value>
            <value>
                <fullName>Account Created</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>