unpackaged/main/default/objects/Lead/fields/Credit_Refresh_Call_List__c.field-meta.xml
<CustomField>
    <fullName>Credit_Refresh_Call_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate that the record was part of the most recent credit refresh.</description>
    <inlineHelpText>This field will indicate that the record was part of the most recent credit refresh.</inlineHelpText>
    <label>Credit Refresh Call List</label>
    <type>Checkbox</type>
</CustomField>