unpackaged/main/default/objects/Lead/fields/Date_Funds_Needed__c.field-meta.xml
<CustomField>
    <fullName>Date_Funds_Needed__c</fullName>
    <description>This field will capture the date that the funds are needed.</description>
    <inlineHelpText>This field will capture the date that the funds are needed.</inlineHelpText>
    <label>Date Funds Needed</label>
    <type>Date</type>
</CustomField>