unpackaged/main/default/objects/Lead/fields/David_Bass_Record_del__c.field-meta.xml
<CustomField>
    <fullName>David_Bass_Record_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>David Bass Record</label>
    <type>Checkbox</type>
</CustomField>