unpackaged/main/default/objects/Lead/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <description>Doing Business As</description>
    <inlineHelpText>Enter DBA name</inlineHelpText>
    <label>DBA</label>
    <length>128</length>
    <type>Text</type>
</CustomField>