unpackaged/main/default/objects/Lead/fields/Delete_Me__c.field-meta.xml
<CustomField>
    <fullName>Delete_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Me</label>
    <type>Checkbox</type>
</CustomField>