unpackaged/main/default/objects/Lead/fields/DialSource_List_Name__c.field-meta.xml
<CustomField>
    <fullName>DialSource_List_Name__c</fullName>
    <description>This field will contain a value for Dial Source reports that can be used to segment records into lists.</description>
    <inlineHelpText>This field will contain a value for Dial Source reports that can be used to segment records into lists.</inlineHelpText>
    <label>DialSource List Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D&amp;B Likely to Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>