unpackaged/main/default/objects/Lead/fields/Dias_Code__c.field-meta.xml
<CustomField>
    <fullName>Dias_Code__c</fullName>
    <description>A code given to us from Experian Leads</description>
    <inlineHelpText>A code given to us from Experian Leads</inlineHelpText>
    <label>Dias Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>