unpackaged/main/default/objects/Lead/fields/DLP_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>DLP_Email_Status__c</fullName>
    <label>DLP Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prequal DocuSign Complete</fullName>
            </value>
            <value>
                <fullName>Prequal Bank Statements Uploaded</fullName>
            </value>
            <value>
                <fullName>Driver's License Uploaded</fullName>
            </value>
            <value>
                <fullName>Voided Check Uploaded</fullName>
            </value>
            <value>
                <fullName>Drip Campaign Started</fullName>
            </value>
            <value>
                <fullName>DLP Drip Activated</fullName>
            </value>
            <value>
                <fullName>DLP Email Sent</fullName>
            </value>
            <value>
                <fullName>DLP Drip Deactivated</fullName>
            </value>
            <value>
                <fullName>DLP Drip Campaign Ended</fullName>
            </value>
            <value>
                <fullName>Prequal Application Signing Complete</fullName>
            </value>
            <value>
                <fullName>DLP Page 1 Complete</fullName>
            </value>
            <value>
                <fullName>DLP Page 2 Complete</fullName>
            </value>
            <value>
                <fullName>Email Link Clicked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>