unpackaged/main/default/objects/Lead/fields/DNB_Segment_Current__c.field-meta.xml
<CustomField>
    <fullName>DNB_Segment_Current__c</fullName>
    <description>The current D&amp;B Marketing Model scores in the Salesforce database to make analysis of the database easier and also to lay the foundation for a potential prioritization of leads.</description>
    <label>DNB Segment Current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>