unpackaged/main/default/objects/Lead/fields/Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the lead desires no further communication via mail.</description>
    <inlineHelpText>Check this box if the lead desires no further communication via mail.</inlineHelpText>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>