unpackaged/main/default/objects/Lead/fields/Do_Not_Solicit__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Solicit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Solicit</description>
    <inlineHelpText>Lead requests to not be solicited again by FPC.</inlineHelpText>
    <label>Do Not Solicit</label>
    <type>Checkbox</type>
</CustomField>