unpackaged/main/default/objects/Lead/fields/Do_Not_Solicit_Formula__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Solicit_Formula__c</fullName>
    <formula>IF( 
OR( DoNotCall ,  HasOptedOutOfEmail ,  HasOptedOutOfFax ,  Do_Not_Mail__c ,  Do_Not_Solicit__c ,  Out_Of_Business__c ) = True, "Do Not Solicit =&gt; 1", "Solicit - All")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Solicit - Formula</label>
    <type>Text</type>
</CustomField>