unpackaged/main/default/objects/Lead/fields/DPBC__c.field-meta.xml
<CustomField>
    <fullName>DPBC__c</fullName>
    <description>Data Point Bar Code - Full 12 digit zip code used for CASS Certification</description>
    <inlineHelpText>Data Point Bar Code - Full 12 digit zip code used for CASS Certification</inlineHelpText>
    <label>DPBC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>