unpackaged/main/default/objects/Lead/fields/DQ_Reasons__c.field-meta.xml
<CustomField>
    <fullName>DQ_Reasons__c</fullName>
    <description>Reasons for Unqualified status</description>
    <inlineHelpText>Select the appropriate reason this LEAD was set to Unqualified</inlineHelpText>
    <label>DQ Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cant Reach</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>