unpackaged/main/default/objects/Lead/fields/DS_PF_Envelope_ID__c.field-meta.xml
<CustomField>
    <fullName>DS_PF_Envelope_ID__c</fullName>
    <description>DocuSign Powerform Envelope ID</description>
    <label>DS PF Envelope ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>