unpackaged/main/default/objects/Lead/fields/EF_Qualification_Comment__c.field-meta.xml
<CustomField>
    <fullName>EF_Qualification_Comment__c</fullName>
    <description>This field will hold disqualification comments inputted by the rep. They are required to put a comment if they choose Other as the qualification status. This field is used by marketing to understand why a lead is disqualified if one of the other options are not selected.</description>
    <inlineHelpText>Used to further describe why this lead is disqualified</inlineHelpText>
    <label>EF Qualification Comment</label>
    <type>TextArea</type>
</CustomField>