unpackaged/main/default/objects/Lead/fields/Email_Captured__c.field-meta.xml
<CustomField>
    <fullName>Email_Captured__c</fullName>
    <description>This field will be used to calculate an email capture rate.  0 indicates no email captured, 1 indicates an email has been captured.</description>
    <formula>IF(Email = "" ,0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will be used to calculate an email capture rate.  0 indicates no email captured, 1 indicates an email has been captured.</inlineHelpText>
    <label>Email Captured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>