unpackaged/main/default/objects/Lead/fields/Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field captures if a customer would like to be included in email newsletters.  This field captures information from the web to lead forms.</description>
    <inlineHelpText>This field captures if a customer would like to be included in email newsletters.  This field captures information from the web to lead forms.</inlineHelpText>
    <label>Email Opt In</label>
    <type>Checkbox</type>
</CustomField>