unpackaged/main/default/objects/Lead/fields/Email_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Email_Workflow__c</fullName>
    <description>This field will capture the email address of the primary contact.  When the lead is converted the email will be populated in the account.  The email address will be on file in the Opportunity for stage driven emails.</description>
    <inlineHelpText>This field will capture the email address of the primary contact.  When the lead is converted the email will be populated in the account.  The email address will be on file in the Opportunity for stage driven emails.</inlineHelpText>
    <label>Email - Workflow</label>
    <type>Email</type>
</CustomField>