unpackaged/main/default/objects/Lead/fields/Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Cost__c</fullName>
    <description>This field will capture the cost of equipment.</description>
    <inlineHelpText>This field will capture the cost of equipment.</inlineHelpText>
    <label>Equipment Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>