unpackaged/main/default/objects/Lead/fields/Equipment_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Time_Frame__c</fullName>
    <description>This field will indicate when the customer needs equipment.  Will be filled out from the web to lead form in most cases.</description>
    <inlineHelpText>This field will indicate when the customer needs equipment.  Will be filled out from the web to lead form in most cases.</inlineHelpText>
    <label>Equipment Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>91+ Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60-90 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>