unpackaged/main/default/objects/Lead/fields/Est_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Est_Credit_Score__c</fullName>
    <description>Customers estimate credit score</description>
    <inlineHelpText>Ask the customer what they think their credit score is</inlineHelpText>
    <label>Est Credit Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>720+ (Excellent)</fullName>
            </value>
            <value>
                <fullName>680 - 719 (Great)</fullName>
            </value>
            <value>
                <fullName>679 and below</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Below 599</fullName>
            </value>
            <value>
                <fullName>Between 600-800</fullName>
            </value>
            <value>
                <fullName>Over 800</fullName>
            </value>
            <value>
                <fullName>Dont know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>