unpackaged/main/default/objects/Lead/fields/Experian_BIN__c.field-meta.xml
<CustomField>
    <fullName>Experian_BIN__c</fullName>
    <label>Experian BIN</label>
    <length>16</length>
    <type>Text</type>
</CustomField>