unpackaged/main/default/objects/Lead/fields/Facility_Contact__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact__c</fullName>
    <label>Facility Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>