unpackaged/main/default/objects/Lead/fields/Facility_Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Facility_Monthly_Amount__c</fullName>
    <label>Facility Monthly Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>