unpackaged/main/default/objects/Lead/fields/Facility_Term__c.field-meta.xml
<CustomField>
    <fullName>Facility_Term__c</fullName>
    <label>Facility Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>