unpackaged/main/default/objects/Lead/fields/Fax_Captured__c.field-meta.xml
<CustomField>
    <fullName>Fax_Captured__c</fullName>
    <description>This field will be used to calculate a fax number capture rate.  0 indicates no fax captured, 1 indicates a fax has been captured.</description>
    <formula>IF( Fax = "", 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will be used to calculate a fax number capture rate.  0 indicates no fax captured, 1 indicates a fax has been captured.</inlineHelpText>
    <label>Fax Captured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>