unpackaged/main/default/objects/Lead/fields/FCRA_Accepted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FCRA_Accepted_Date_Time__c</fullName>
    <description>Timestamp of when the lead has agreed to the FCRA consent.</description>
    <label>FCRA Accepted Date/Time</label>
    <type>DateTime</type>
</CustomField>