unpackaged/main/default/objects/Lead/fields/FICO__c.field-meta.xml
<CustomField>
    <fullName>FICO__c</fullName>
    <inlineHelpText>DELETE THIS FIELD</inlineHelpText>
    <label>Max FICO Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>