unpackaged/main/default/objects/Lead/fields/FICO_Score__c.field-meta.xml
<CustomField>
    <fullName>FICO_Score__c</fullName>
    <description>Customers FICO Score</description>
    <inlineHelpText>Customers FICO Score</inlineHelpText>
    <label>Min FICO Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>