unpackaged/main/default/objects/Lead/fields/Financial_Stress_Score__c.field-meta.xml
<CustomField>
    <fullName>Financial_Stress_Score__c</fullName>
    <label>Financial Stress Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>