unpackaged/main/default/objects/Lead/fields/Formula_Home_State__c.field-meta.xml
<CustomField>
    <fullName>Formula_Home_State__c</fullName>
    <description>This is a temporary field to populate the EVF/Prequal form</description>
    <formula>TEXT(State__c)</formula>
    <inlineHelpText>This is a temporary field to populate the EVF/Prequal form</inlineHelpText>
    <label>Formula Home State</label>
    <type>Text</type>
</CustomField>