unpackaged/main/default/objects/Lead/fields/Formula_State__c.field-meta.xml
<CustomField>
    <fullName>Formula_State__c</fullName>
    <description>Temporary field to populate the city in a EVF / Prequal.</description>
    <formula>State</formula>
    <inlineHelpText>Temporary field to populate the city in a EVF / Prequal.</inlineHelpText>
    <label>Formula State</label>
    <type>Text</type>
</CustomField>