unpackaged/main/default/objects/Lead/fields/FPC_Rep_EPP__c.field-meta.xml
<CustomField>
    <fullName>FPC_Rep_EPP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FPC Sales Rep for EPP</description>
    <inlineHelpText>Select the Sales Rep for EPP</inlineHelpText>
    <label>FPC Rep EPP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads_RepEPP</relationshipName>
    <type>Lookup</type>
</CustomField>