unpackaged/main/default/objects/Lead/fields/FPC_Rep_Lease__c.field-meta.xml
<CustomField>
    <fullName>FPC_Rep_Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NF Sales Rep for Lease</description>
    <inlineHelpText>Select Sales Rep for Lease</inlineHelpText>
    <label>NF Rep Lease</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>