unpackaged/main/default/objects/Lead/fields/FPC_Rep_ML__c.field-meta.xml
<CustomField>
    <fullName>FPC_Rep_ML__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FPC Sales Rep for ML</description>
    <inlineHelpText>Select Sales Rep for ML</inlineHelpText>
    <label>FPC Rep ML</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads5</relationshipName>
    <type>Lookup</type>
</CustomField>