unpackaged/main/default/objects/Lead/fields/Fund_Score__c.field-meta.xml
<CustomField>
    <fullName>Fund_Score__c</fullName>
    <description>D&amp;B Fund Score.</description>
    <label>Fund Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>