unpackaged/main/default/objects/Lead/fields/Funding_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Funding_Time_Frame__c</fullName>
    <description>This field will capture the range of time that the customer expects to need funds in.</description>
    <inlineHelpText>This field will capture the range of time that the customer expects to need funds in.</inlineHelpText>
    <label>Funding Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-30</fullName>
            </value>
            <value>
                <fullName>31-60</fullName>
            </value>
            <value>
                <fullName>61-90</fullName>
            </value>
            <value>
                <fullName>90+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>