unpackaged/main/default/objects/Lead/fields/gclid_ID__c.field-meta.xml
<CustomField>
    <fullName>gclid_ID__c</fullName>
    <description>Will capture the gclid value of the incoming Lead from the website.</description>
    <label>gclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>