unpackaged/main/default/objects/Lead/fields/gclsrc_ID__c.field-meta.xml
<CustomField>
    <fullName>gclsrc_ID__c</fullName>
    <description>Will capture the glcsrc value of the incoming Lead from the website.</description>
    <label>gclsrc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>