unpackaged/main/default/objects/Lead/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <description>Customer's Home Phone Number</description>
    <inlineHelpText>Enter the customer's home phone number.</inlineHelpText>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>