unpackaged/main/default/objects/Lead/fields/Home_Phone_Trim__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone_Trim__c</fullName>
    <externalId>true</externalId>
    <label>Home Phone Trim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>